<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="P_MI1_OnOff" Id="{c8b14d52-094f-4a7e-b91b-4c0d8c76e44c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_MI1_OnOff
VAR_INPUT
	//
	// INT 
	n_Step: INT := 0;	
END_VAR
VAR
	//
	// BOOL 
	b_Condition: BOOL;
	b_No_Emergency_Stop:BOOL :=TRUE;
	
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[//***********************************************************************************
//
// ETH Zürich / Robotic Fabrication Lab
// HIB C 13 / Stefano-Franscini-Platz 1
// CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Inline Mixer
// 
// FUNCTION    :  Step chain for mixer on or off 
// 
// AUTHOR      :  Fabio Scotto / Philippe Fleischmann
// 
// EMAIL       :  scotto@arch.ethz.ch / fleischmann@arch.ehtz.ch
// 
// Copyright   :  ETH Zürich (CH) 2020
//
// ***********************************************************************************

// Ignore emergency stop
b_No_Emergency_Stop:=TRUE;

//
// Initalization
IF n_Step=0 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=10;
	END_IF
END_IF

//
// Wait for start mixer
IF n_Step=10 THEN
	//
	// Check condition 
	b_Condition:= GVL_VAR.b_MI1_ReadToDrive AND GVL_IO.ib_MI1_Button_On;
	//
	// Do step
	IF b_Condition AND b_No_Emergency_Stop THEN
		b_Condition:=FALSE;
		n_Step:=20;
	END_IF
END_IF

//
// Reserve
IF n_Step=20 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition AND b_No_Emergency_Stop THEN
		b_Condition:=FALSE;
		n_Step:=30;
	END_IF
END_IF

//
// Run for mixer 
IF n_Step=30 THEN
	//
	// Check condition 
	b_Condition:= NOT GVL_IO.ib_MI1_Button_Not_Off OR NOT GVL_VAR.b_MI1_ReadToDrive;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=40;
	END_IF
END_IF

//
// Reserve
IF n_Step=40 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition AND b_No_Emergency_Stop THEN
		b_Condition:=FALSE;
		n_Step:=50;
	END_IF
END_IF

//
// Return to step 10 
IF n_Step=50 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=10;
	END_IF
END_IF

// ****************************************
// Write global variabls
// ****************************************

//
// Mixer run
GVL_VAR.b_MI1_Run:=n_Step=30;


// ****************************************
// Timer
// ****************************************


]]></ST>
    </Implementation>
    <LineIds Name="P_MI1_OnOff">
      <LineId Id="3" Count="7" />
      <LineId Id="160" Count="0" />
      <LineId Id="12" Count="2" />
      <LineId Id="161" Count="6" />
      <LineId Id="22" Count="86" />
      <LineId Id="182" Count="0" />
      <LineId Id="184" Count="2" />
      <LineId Id="188" Count="0" />
      <LineId Id="187" Count="0" />
      <LineId Id="189" Count="1" />
      <LineId Id="183" Count="0" />
      <LineId Id="109" Count="3" />
      <LineId Id="120" Count="1" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>